--- a/react-app/src/components/auth/form.css
+++ b/react-app/src/components/auth/form.css
@@ -7,17 +7,6 @@
   flex-direction: column;
 }
 
-#form-signup-box {
-  height: 62px;
-  width: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  font-size: 14px;
-  border: 0.8px solid #F1EEEA;
-}
-
 .form-container {
   display: flex;
   flex-direction: column;
@@ -52,4 +41,16 @@
 .btn-primary:hover {
   background-color: rgb(1, 87, 56);
   cursor: pointer;
+}
+
+/*Sign up page specific styles*/
+#form-signup-box {
+  height: 62px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  font-size: 14px;
+  border: 0.8px solid #F1EEEA;
 }
