Can now give a youtube video src or image src to project. The project page will render the video if there is one, if not it will render the image, if not it will render just a blank box

--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -25,9 +25,10 @@
   margin: 0 18px;
 }
 
-#project-image, iframe{
+#project-image, iframe, img {
   height: inherit;
   width: inherit;
+  background-color: teal;
 }
 
 #project-minor-info {
