--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -25,7 +25,7 @@
   margin: 0 18px;
 }
 
-#project-image, iframe, img {
+#project-image-conatiner, #project-video, #project-image {
   height: inherit;
   width: inherit;
   background-color: teal;
