--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -47,5 +47,15 @@
   height: 425px;
   width: 400px;
   margin: 0 18px;
-  background-color: teal;
+  background-color: blanchedalmond;
+}
+
+#project-progress-bar {
+  height: 6px;
+  background-color: rgb(232, 232, 232);
+}
+
+#project-progress {
+  height: inherit;
+  background-color: #009E74;
 }
