project info style updates

--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -59,3 +59,12 @@
   height: inherit;
   background-color: #009E74;
 }
+
+#project-info-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-main-info-header {
+  font-size: 28px;
+}
