added nested nva bar

--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -110,3 +110,65 @@
   color: rgb(40, 40, 40);
   font-size: 18px;
 }
+
+/* Project */
+.test {
+	position: sticky;
+  top: 0;
+  display: flex;
+  height: 70px;
+  width: 100%;
+  border-top: solid 0.8px #DCDEDD;
+  border-bottom: solid 0.8px #DCDEDD;
+  /* background-color: #77dd88; */
+}
+
+.test-block {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  height: inherit;
+  width: 90%;
+  margin: auto;
+  padding: 0 60px;
+  /* background-color: khaki; */
+}
+
+.test-item-container {
+  display: flex;
+  align-items: center;
+  /* background-color: lavender ; */
+}
+
+.test-item {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  /* background-color: lightcoral; */
+  color: rgb(40, 40, 40);
+  font-size: 14px;
+  margin-right: 18px;
+}
+
+.test-item:not(:nth-child(1)) {
+  margin-left: 18px;
+}
+
+.test-item-btn {
+  display: flex;
+  align-items: center;
+  padding: 10.5px 18px;
+  height: 40px;
+  width: 145px;
+}
+
+.active-test {
+  border-bottom: solid 3px black;
+  border-left: dotted 0.8px black;
+  border-right: dotted 0.8px black;
+  padding: 0 5px;
+}
+
+.huge {
+  height: 1000px;
+  width: 100%;
+}
