--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -141,6 +141,7 @@
 
 .test-item {
   display: flex;
+  position: absolute;
   align-items: center;
   height: 100%;
   /* background-color: lightcoral; */
