--- a/react-app/src/components/CommentsSection/CommentsSection.css
+++ b/react-app/src/components/CommentsSection/CommentsSection.css
@@ -8,7 +8,7 @@
 .comments-section {
   width: 680px;
   padding: 12px;
-  background-color: rgb(247, 247, 246);
+  background-color: rgb(251, 251, 250);
   border: solid 0.8px rgb(232, 232, 232);
 }
 
@@ -16,5 +16,16 @@
   height: 160px;
   width: 350px;
   margin: 0 18px;
-  background-color: rosybrown;
+  border-left: solid 2.4px rgb(220, 222, 221);
+}
+
+.comments-right-top-text {
+  margin-bottom: 20px;
+}
+
+.comments-right-top-text, .comments-right-bottom-text, .comments-right-link {
+  width: 300px;
+  line-height: 24px;
+  font-size: 14px;
+  padding-left: 18px;
 }
