--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -141,10 +141,9 @@
 
 .test-item {
   display: flex;
-  position: absolute;
   align-items: center;
   height: 100%;
-  background-color: lightcoral;
+  /* background-color: lightcoral; */
   color: rgb(40, 40, 40);
   font-size: 14px;
   margin-right: 18px;
