--- a/react-app/src/components/CommentsSection/CommentsSection.css
+++ b/react-app/src/components/CommentsSection/CommentsSection.css
@@ -20,10 +20,14 @@
   border: solid 0.8px rgb(232, 232, 232);
 }
 
+/* Right col styles */
 .comments-right-col {
+  margin: 0 18px;
+}
+
+.comments-right-col-info {
   height: 160px;
   width: 350px;
-  margin: 0 18px;
   border-left: solid 2.4px rgb(220, 222, 221);
 }
 
@@ -41,4 +45,8 @@
 .comments-right-link {
   font-weight: bold;
   text-decoration: underline;
+}
+
+.comments-btn {
+  margin-top: 16px;
 }
