--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -121,6 +121,8 @@
   border-top: solid 0.8px #DCDEDD;
   border-bottom: solid 0.8px #DCDEDD;
   /* background-color: #77dd88; */
+  background-color: white;
+  z-index: 1
 }
 
 .test-block {
