can now post comments

--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -120,7 +120,7 @@
   width: 100%;
   border-top: solid 0.8px #DCDEDD;
   border-bottom: solid 0.8px #DCDEDD;
-  /* background-color: #77dd88; */
+  background-color: white;
 }
 
 .test-block {
