added edit and delete buttons and style for them

--- a/react-app/src/components/CommentsSection/Comment.css
+++ b/react-app/src/components/CommentsSection/Comment.css
@@ -23,11 +23,16 @@
 }
 
 .comment-description {
+  display: flex;
+  justify-content: space-between;
   font-size: 14px;
 }
 
 .comment-info {
-
   display: flex;
   flex-direction: column;
+}
+
+.comment-delete, .comment-edit {
+  padding: 6px;
 }
