--- a/react-app/src/components/UpdatesComponent/UpdatesComponent.css
+++ b/react-app/src/components/UpdatesComponent/UpdatesComponent.css
@@ -10,23 +10,30 @@
 
 .updates_inner_container {
     border: 2px solid grey;
+    background-color: white;
+    margin-top: 40px;
     display:flex;
     flex-direction: column;
     gap: 40px;
-    width: 700px;
+    width: 830px;
     margin-bottom: 50px;
+    align-items: flex-start;
+    /* z-index: 0; */
 }
 
+.updates_container{
+    /* border: 2px solid red; */
+}
 
 .updateInfo{
-
+    margin-top: 40px;
+    margin-left: 40px;
 }
 
 .updateNumber {
     /* border: 2px solid goldenrod; */
-    position: relative;
-    top: 30px;
-    left: 40px;
+    /* position: absolute; */
+    bottom: 40px;
     color: grey;
     font-size: 20px;
 }
@@ -34,11 +41,10 @@
 
 .projectOwner{
     /* border: 2px solid purple; */
-    position: relative;
     font-size: 20px;
-    left: 40px;
+
     bottom: 20px;
-    width: 600px;
+    width: 750px;
     height: 45px;
     border-bottom: 1px solid grey;
 
@@ -47,18 +53,17 @@
 
 .projectTitle{
     /* border: 2px solid orange; */
-    position: relative;
-    left: 40px;
+    
     width: 600px;
     font-size: 40px;
+    
 }
 
 
 .projectDescription{
     /* border: 2px solid blue; */
-    position: relative;
     width: 600px;
-    left: 40px;
+    
     bottom: 40px;
     height: 300px;
 }
