added styling and deletion functionality to updates on projects page

--- a/react-app/src/components/UpdatesComponent/UpdatesComponent.css
+++ b/react-app/src/components/UpdatesComponent/UpdatesComponent.css
@@ -25,6 +25,32 @@
     /* border: 2px solid red; */
 }
 
+.updateBtn_container{
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: flex-end;
+}
+
+.updates_deleteBtn{
+    /* border: 2px solid red; */
+    display: flex;
+    /* position: absolute; */
+    /* position: relative; */
+    align-items: center;
+    background-color: rgb(0, 158, 116);
+    color: white;
+    justify-content: center;
+    right: 10px;
+    width: 100px;
+    height: 50px;
+}
+
+.updates_deleteBtn:hover{
+    width: 150px;
+    height: 60px;
+
+}
+
 .updateInfo{
     margin-top: 40px;
     margin-left: 40px;
