--- a/react-app/src/components/ProjectPage/ProjectPage.css
+++ b/react-app/src/components/ProjectPage/ProjectPage.css
@@ -131,7 +131,7 @@
   width: 90%;
   margin: auto;
   padding: 0 60px;
-  background-color: white;
+  /* background-color: white; */
 }
 
 .test-item-container {
