--- a/react-app/src/components/CreateProjectPage/StartForms/css/drop-down.css
+++ b/react-app/src/components/CreateProjectPage/StartForms/css/drop-down.css
@@ -14,6 +14,6 @@
 
 .start-drop-down:hover {
   border: solid 1px#282828;
-  transform: translateY(-1px);
+  /* transform: translateY(-1px); */
   transition: all 0.25s ease-in-out;
 }
