--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -1,3 +1,122 @@
 .splash-page.main_container{
-    height: 800px;
+    height: 900px;
+    border: 2px solid rgb(136, 59, 59);
+    
 }
+
+.splashNav_container{
+    /* border: 1px solid red; */
+    border-bottom: 1px solid green;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    
+
+}
+
+.splashNav{
+    /* border: 1px solid black; */
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #656969;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+}
+
+.featuredProj_outmost_container{
+    border-right: 1px solid purple;
+    /* border: 2px solid black; */
+    float: left;
+    margin-top: 30px;
+    /* margin-bottom: 30px; */
+    width: 50%;
+    Height: 80%;
+    
+
+}
+
+.featuredProj_inner_container{
+    /* border: 1px solid black; */
+    height: 90%;
+    
+}
+
+.featureItem{
+    /* border: 2px solid purple; */
+    /* margin-top: 20px; */
+    /* gap: 2px; */
+
+}
+
+.featuredProject_label{
+    display: flex;
+    position: relative;
+    /* border: 2px solid green; */
+    /* justify-content: center; */
+    /* bottom: 18px; */
+    color: #2828289f;
+        -webkit-font-smoothing: antialiased;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    top: 30px;
+    left: 10%;
+    width: 200px;
+}
+
+.featuredProject_img{
+    position: relative;
+    left: 10%;
+    top: 50px;
+    width: 80%;
+    height: 330px;
+}
+
+
+.featuredProject_title{
+    position: relative;
+    /* border: 4px solid red; */
+    left: 10%;
+    top: 70px;
+    font-size: 28px;
+    font-weight: 400;
+    color: #282828;
+        -webkit-font-smoothing: antialiased;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.featuredProject_subTitle{
+    position: relative;
+    /* border: 4px solid red; */
+    font-size: 20px;
+    color: #656969;
+        -webkit-font-smoothing: antialiased;
+    font-weight: 400;
+    
+    left: 10%;
+    top: 90px;
+    width: 80%;
+    font-family: "Cooper Light", Georgia, Times, "Times New Roman", serif;
+}
+
+/*---------------------------------------------------------------------------------------------------*/
+
+.recommended_outmost_container{
+    /* flex-basis: ; */
+    border: 2px solid orange;
+    position: relative;
+    float: right;
+    top: 60px;
+    left: 50px;
+    width: 50%;
+    height: 80%;
+     color: #2828289f;
+        -webkit-font-smoothing: antialiased;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+
