--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -110,7 +110,7 @@
     position: relative;
     float: right;
     top: 60px;
-    left: 50px;
+    /* left: 50px; */
     width: 50%;
     height: 80%;
      color: #2828289f;
