--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -75,6 +75,14 @@
     height: 330px;
 }
 
+.featuredProject_video{
+    position: relative;
+    left: 10%;
+    top: 50px;
+    width: 80%;
+    height: 330px;
+}
+
 
 .featuredProject_title{
     position: relative;
