--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -1,12 +1,12 @@
 .splash-page.main_container{
     height: 900px;
-    border: 2px solid rgb(136, 59, 59);
+    /* border: 2px solid rgb(136, 59, 59); */
     
 }
 
 .splashNav_container{
     /* border: 1px solid red; */
-    border-bottom: 1px solid green;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.112);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -27,7 +27,7 @@
 }
 
 .featuredProj_outmost_container{
-    border-right: 1px solid purple;
+    border-right: 1px solid rgba(0, 0, 0, 0.112);
     /* border: 2px solid black; */
     float: left;
     margin-top: 30px;
@@ -114,7 +114,9 @@
 
 .recommended_outmost_container{
     /* flex-basis: ; */
-    border: 2px solid orange;
+    display: flex;
+    flex-direction: column;
+    /* border: 2px solid orange; */
     position: relative;
     float: right;
     top: 60px;
@@ -126,5 +128,89 @@
     font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-weight: 500;
+}
+
+.recommendedLabel_ctnr {
+    /* border: 2px solid black; */
+}
+
+.recommendedTwo_ctnr {
+    /* border: 2px solid black; */
+    position: relative;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.112);
+    padding-bottom: 30px;
+    width: 75%;
+    left: 10%;
+}
+
+.recommendedThree_ctnr{
+    /* border: 2px solid black; */
+    position: relative;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.112);
+    padding-bottom: 30px;
+    width: 75%;
+    left: 10%;
+}
+
+.recommendedFour_ctnr{
+    /* border: 2px solid black; */
+    position: relative;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.112);
+    padding-bottom: 30px;
+    width: 75%;
+    left: 10%;
+}
+
+.recommendedLabel {
+    position: relative;
+    left: 10%;
+}
+
+.recommended_img {
+    width: 200px;
+    height: 110px;
+    float: left;
+    margin-bottom: 10px;
+    margin-right: 20px;
+
+}
+
+.recommended_title{
+    display:flex;
+    justify-content: flex-start;
+    position: relative;
+    /* border: 2px solid purple; */
+    width: 300px;
+    font-size: 18px;
+    
+    
+}
+
+.recommended_goal {
+    display:flex;
+    justify-content: flex-start;
+    position: relative;
+    /* border: 2px solid purple; */
+    color: rgb(3, 115, 98);
+    font-weight: 700;
+    width: 300px;
+}
+
+.recommended_description{
+    /* display:flex; */
+    /* justify-content: flex-start; */
+    /* position: relative; */
+    /* border: 2px solid red; */
+    /* width: 500px; */
+}
+
+.rec_item{
+    position: relative;
+    /* border: 3px solid yellow; */
+    margin-top:10px;
+    top: 10%;
+    /* left: 10%; */
+    
+
 }
 
