--- a/react-app/src/components/EditProjectPage/SubPages/FormWrapper.css
+++ b/react-app/src/components/EditProjectPage/SubPages/FormWrapper.css
@@ -1,13 +1,22 @@
+.form-wrapper-border {
+  border: solid 1px#DCDEDD;
+}
+
+.form-wrapper-spacer {
+  display: flex;
+  padding: 48px 0;
+}
+
 .form-info-container {
   padding: 0 18px;
   width: calc(4/12 * 100%);
+  line-height: 24px;
 }
 
 .form-info-header {
   width: 100%;
   font-size: 18px;
   font-weight: 500;
-  line-height: 24px;
   margin-bottom: 6px;
 }
 
@@ -15,4 +24,9 @@
   font-size: 16px;
   color: rgb(101, 105, 105);
   margin-bottom: 20px
+}
+
+.ggg {
+  padding: 0 18px;
+  margin-left: calc(1/12 * 100%);
 }
