--- a/react-app/src/components/EditProjectPage/SubPages/SubPageHeader.css
+++ b/react-app/src/components/EditProjectPage/SubPages/SubPageHeader.css
@@ -1,3 +1,7 @@
+.sub-page-header-border {
+  border-bottom: solid 0.8px rgb(220, 222, 221);
+}
+
 .sub-page-header-spacer {
   padding: 0 18px;
   margin: 0 auto;
