finished styling homepage

--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -72,7 +72,7 @@
     left: 10%;
     top: 50px;
     width: 80%;
-    height: 330px;
+    height: 400px;
 }
 
 .featuredProject_video{
@@ -89,7 +89,7 @@
     /* border: 4px solid red; */
     left: 10%;
     top: 70px;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: 400;
     color: #282828;
         -webkit-font-smoothing: antialiased;
@@ -99,13 +99,27 @@
 .featuredProject_subTitle{
     position: relative;
     /* border: 4px solid red; */
-    font-size: 20px;
+    font-size: 23px;
     color: #656969;
         -webkit-font-smoothing: antialiased;
     font-weight: 400;
     
     left: 10%;
     top: 90px;
+    width: 80%;
+    font-family: "Cooper Light", Georgia, Times, "Times New Roman", serif;
+}
+
+.featuredProject_owner{
+    position: relative;
+    /* border: 4px solid red; */
+    font-size: 16px;
+    color: #656969;
+        -webkit-font-smoothing: antialiased;
+    font-weight: 400;
+    
+    left: 10%;
+    top: 120px;
     width: 80%;
     font-family: "Cooper Light", Georgia, Times, "Times New Roman", serif;
 }
@@ -123,52 +137,56 @@
     /* left: 50px; */
     width: 50%;
     height: 80%;
-     color: #2828289f;
-        -webkit-font-smoothing: antialiased;
+    color: #2828289f;
+    -webkit-font-smoothing: antialiased;
     font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
-    font-weight: 500;
+    /* font-weight: 500; */
 }
 
 .recommendedLabel_ctnr {
     /* border: 2px solid black; */
+    font-weight: 400;
 }
 
 .recommendedTwo_ctnr {
     /* border: 2px solid black; */
     position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    padding-bottom: 30px;
+    padding-bottom: 60px;
     width: 75%;
-    left: 10%;
+    left: 15%;
 }
 
 .recommendedThree_ctnr{
     /* border: 2px solid black; */
     position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    padding-bottom: 30px;
+    padding-bottom: 60px;
     width: 75%;
-    left: 10%;
+    left: 15%;
 }
 
 .recommendedFour_ctnr{
     /* border: 2px solid black; */
     position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    padding-bottom: 30px;
+    padding-bottom: 60px;
     width: 75%;
-    left: 10%;
+    left: 15%;
 }
 
 .recommendedLabel {
     position: relative;
-    left: 10%;
+    left: 15%;
+    /* color: purple; */
+    font-weight: 550;
+    
 }
 
 .recommended_img {
     width: 200px;
-    height: 110px;
+    height: 120px;
     float: left;
     margin-bottom: 10px;
     margin-right: 20px;
@@ -182,6 +200,7 @@
     /* border: 2px solid purple; */
     width: 300px;
     font-size: 18px;
+    font-weight: 100px;
     
     
 }
@@ -196,12 +215,9 @@
     width: 300px;
 }
 
-.recommended_description{
-    /* display:flex; */
-    /* justify-content: flex-start; */
-    /* position: relative; */
-    /* border: 2px solid red; */
-    /* width: 500px; */
+.recommended_owner{
+    color: rgba(0, 0, 0, 0.447);
+    font-weight: 400;
 }
 
 .rec_item{
@@ -212,5 +228,94 @@
     /* left: 10%; */
     
 
+}
+
+/*------------------------------------------------------------------------*/
+
+.accessory_ctnr{
+    /* border: 2px solid black; */
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 120px;
+    top: 20px;
+}
+
+
+.bookmark_ctnr {
+    border: 2px solid rgba(0, 0, 0, 0.249);
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+}
+
+.bookmark_ctnr:hover {
+    background-color: rgba(0, 0, 0, 0.249);
+    cursor: pointer;
+    
+}
+
+.bookmark_btn{
+
+}
+
+.boomark_img{
+    position: relative;
+    bottom: 8.5px;
+    right: 8.5px;
+    width:40px;
+    height:40px;
+}
+
+
+.like_ctnr{
+    border: 2px solid rgba(0, 0, 0, 0.249);
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+}
+
+.like_ctnr:hover{
+    background-color: rgba(0, 0, 0, 0.249);
+    cursor: pointer;
+}
+
+.like_btn{
+
+}
+
+.like_img{
+    position: relative;
+    top: 1px;
+    left: 1px;
+    width:18px;
+    height: 18px;
+}
+
+.dislike_ctnr{
+    border: 2px solid rgba(0, 0, 0, 0.249);
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+    
+}
+
+.dislike_ctnr:hover {
+    background-color: rgba(0, 0, 0, 0.249);
+    cursor: pointer;
+}
+
+
+.dislike_btn{
+    
+}
+
+.dislike_img{
+    position: relative;
+    top: 3px;
+    left: 2px;
+    width:18px;
+    height: 18px;
 }
 
