--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -34,6 +34,7 @@
     /* margin-bottom: 30px; */
     width: 50%;
     Height: 80%;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
     
 
 }
@@ -41,6 +42,7 @@
 .featuredProj_inner_container{
     /* border: 1px solid black; */
     height: 90%;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
     
 }
 
@@ -48,6 +50,7 @@
     /* border: 2px solid purple; */
     /* margin-top: 20px; */
     /* gap: 2px; */
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 }
 
@@ -65,6 +68,7 @@
     top: 30px;
     left: 10%;
     width: 200px;
+
 }
 
 .featuredProject_img{
@@ -94,6 +98,10 @@
     color: #282828;
         -webkit-font-smoothing: antialiased;
     font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.featuredProject_title:hover{
+    text-decoration: underline;
 }
 
 .featuredProject_subTitle{
@@ -147,33 +155,37 @@
 .recommendedLabel_ctnr {
     /* border: 2px solid black; */
     font-weight: 400;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .recommendedTwo_ctnr {
     /* border: 2px solid black; */
     position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     width: 75%;
     left: 15%;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .recommendedThree_ctnr{
     /* border: 2px solid black; */
     position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     width: 75%;
     left: 15%;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .recommendedFour_ctnr{
     /* border: 2px solid black; */
     position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     width: 75%;
     left: 15%;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .recommendedLabel {
@@ -181,6 +193,7 @@
     left: 15%;
     /* color: purple; */
     font-weight: 550;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
     
 }
 
@@ -201,6 +214,13 @@
     width: 300px;
     font-size: 18px;
     font-weight: 100px;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    
+    
+}
+
+.recommended_title:hover{
+    text-decoration: underline;
     
     
 }
@@ -213,11 +233,18 @@
     color: rgb(3, 115, 98);
     font-weight: 700;
     width: 300px;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .recommended_owner{
     color: rgba(0, 0, 0, 0.447);
     font-weight: 400;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.recommended_owner:hover{
+    text-decoration: underline;
+    
 }
 
 .rec_item{
@@ -226,6 +253,7 @@
     margin-top:10px;
     top: 10%;
     /* left: 10%; */
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
     
 
 }
@@ -240,6 +268,7 @@
     justify-content: space-between;
     width: 120px;
     top: 20px;
+    
 }
 
 
