--- a/react-app/src/components/UpdateDisplayComponent/UpdateDisplayComponent.css
+++ b/react-app/src/components/UpdateDisplayComponent/UpdateDisplayComponent.css
@@ -1,9 +1,67 @@
 .outter_container{
-    border: 2px solid red;
-    height:800px;
+    /* border: 2px solid red; */
+    height:100%;
 }
 
 .inner_Container{
-    border: 2px solid navy;
-    height:800px;
+    /* border: 2px solid navy; */
+    height:100%;
+}
+
+.updateBtn.btn {
+    /* border: 1px solid purple; */
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 150px;
+    height: 50px;
+    margin-top: 15px;
+    margin-bottom: 50px;
+    left: 20%;
+}
+.updateBtn.leftArrow {
+   position: relative;
+   margin-right: 15px;
+}
+
+.item{
+    position: relative;
+    border: 2px solid red;
+    margin-bottom: 15px;
+    left: 20%;
+    /* width: 800px; */
+    /* height: 600px; */
+
+}
+
+.updateDisplayNum{
+    color: rgba(128, 128, 128, 0.739);
+}
+
+.updateDisplayTitle{
+    font-size: 32px;
+    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 800px;
+}
+
+.user_ctnr{
+    display: flex;
+
+}
+
+.updateDisplayUsername{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.updateDisplayImg{
+    width: 50px;
+    height: 50px;
+}
+
+.updateDisplayDescription{
+    height: 100%;
 }
