--- a/react-app/src/components/Discover/Discover.css
+++ b/react-app/src/components/Discover/Discover.css
@@ -9,22 +9,31 @@
 }
 
 .discover-header-inner{
-  width: 300px;
+  width: fit-content;
   margin: 30px auto;
   display:flex;
   justify-content: space-between;
+  align-items: center;
+  font-size: 17px;
 }
 
 .discover-header-inner select{
   border: none;
   box-shadow: 0 0 5px rgb(145, 145, 145);
+  height: 40px;
+  padding: 10px;
+  width: fit-content;
+  margin: 0 20px 0;
 }
 
+.discover-option{
+  padding: 10px;
+}
 .discover-results{
   margin: 0 auto;
   display:flex;
-  flex-direction:column;
-  width: 80vw;
+  flex-direction: column;
+  max-width: 80vw;
   font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -32,9 +41,15 @@
   padding-bottom: 30px;
 }
 
+.discover-results-cards-container{
+  display:flex;
+  flex-wrap: wrap;
+}
+
 .discover-card{
-  margin: 0 auto;
-  width: 300px;
+  margin: 30px auto;
+  min-width: 300px;
+  max-width: 300px;
   border: 1px solid lightgray;
   padding-bottom: 15px;
 }
@@ -65,6 +80,8 @@
 }
 
 .discover-thumbnail{
-  max-width:100%;
-  max-height:100%;
+  width:100%;
+  height:165px;
+  object-fit:cover;
+  object-position:100%;
 }
