--- a/react-app/src/components/UpdateDisplayComponent/UpdateDisplayComponent.css
+++ b/react-app/src/components/UpdateDisplayComponent/UpdateDisplayComponent.css
@@ -1,36 +1,45 @@
-.outter_container{
+
+.updateDisplay.outter_container{
     /* border: 2px solid red; */
     display: flex;
     justify-content: center;
+    background-color: white;
     height:100%;
     
 }
 
-.inner_Container{
-    /* border: 2px solid navy; */
+.updateDisplay.inner_Container{
+    /* border: 2px solid black; */
+    background-color:white;
+    display: flex;
+    flex-direction: column;
     height:100%;
     width: 800px;
+    margin-top: 15px;
+    margin-bottom: 100px; 
 }
 
 .updateBtn.btn {
     /* border: 1px solid purple; */
     display: flex;
-    position: relative;
+    /* position: relative; */
     justify-content: center;
     align-items: center;
     flex-direction: row;
     width: 150px;
     height: 50px;
-    margin-top: 15px;
-    margin-bottom: 50px;
+    margin-top: -1px;
+    margin-bottom: 70px;
 }
+
+
 .updateBtn.leftArrow {
-   position: relative;
+   /* position: relative; */
    margin-right: 15px;
 }
 
 .item{
-    position: relative;
+    /* position: relative; */
     /* border: 2px solid red; */
     margin-bottom: 15px;
 
@@ -49,7 +58,8 @@
 
 .user_ctnr{
     display: flex;
-    border-bottom: 2px solid;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.287);
+    width: 100%;
 }
 
 .updateDisplayUsername{
@@ -57,14 +67,40 @@
     justify-content: center;
     align-items: center;
 }
+/* height: fit-content; */
 
 .updateDisplayImg{
     width: 50px;
     height: 50px;
 }
 
+.updateDisplayDescriptionCtnr {
+    /* border: 2px solid black; */
+    /* height: 1000px; */
+}
+
 .updateDisplayDescription{
     margin-top: 20px;
     height: 100%;
     width: 800px;
+    /* height: 700px; */
+}
+
+.accessory_ctnr{
+    /* border: 1px solid red; */
+    
+}
+
+.creatorTag{
+    border: 2px solid white;
+    background-color: #05CE78;
+    color: white;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25px;
+    width:65px;
+    margin-top: 14px;
+    margin-left: 5px;
 }
