--- a/react-app/src/components/TagsModal/Tags.css
+++ b/react-app/src/components/TagsModal/Tags.css
@@ -2,7 +2,6 @@
   width:100vw;
   height:100vh;
   padding: 30px 50px;
-
 }
 
 .tags-header-inner{
@@ -11,8 +10,8 @@
   border-bottom: 2px solid gray;
   padding-bottom: 20px;
   margin-bottom: 20px;
-  animation-duration:2s;
-  animation-name:slidein;
+  animation-duration:1s;
+  animation-name:slidein-head;
 }
 
 .tags-header-inner button{
@@ -20,6 +19,8 @@
   border: none;
   font-size: 20px;
   font-style: bold;
+  animation-duration:1s;
+  animation-name:slidein-tags;
 }
 
 .tags-header-inner button:hover{
@@ -29,24 +30,44 @@
 .tags-list{
   display:flex;
   flex-direction: column;
-  animation-duration:2s;
-  animation-name:slidein;
+  animation-duration:1s;
+  animation-name:slidein-tags;
 }
 
 .tags-item{
   width: fit-content;
   font-size: 40px;
+  animation-duration:1s;
+  animation-name:fade;
 }
 
 
 
-@keyframes slidein {
+@keyframes slidein-head {
   from{
     color: white;
-    top: -100px;
+    margin-bottom: 120px;
   }
   to {
     color: black;
-    top: 10px;
+    margin-bottom: 20px;
+  }
+}
+
+
+@keyframes slidein-tags {
+  from{
+    margin-bottom: 120px;
+  }
+  to {
+    margin-bottom: 0px;
+  }
+}
+@keyframes fade {
+  from{
+    color: white;
+  }
+  to {
+    color: black;
   }
 }
