--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -270,7 +270,7 @@
 .bookmark_ctnr {
     border: 2px solid rgba(0, 0, 0, 0.249);
     border-radius: 50%;
-    width: 28px;
+    width: 30px;
     height: 28px;
 }
 
@@ -286,10 +286,10 @@
 
 .boomark_img{
     position: relative;
-    bottom: 8.5px;
-    right: 8.5px;
-    width:40px;
-    height:40px;
+    top: 3px;
+    left: 5px;
+    width:15px;
+    height:18px;
 }
 
 
