--- a/react-app/src/components/UpdateDisplayComponent/UpdateDisplayComponent.css
+++ b/react-app/src/components/UpdateDisplayComponent/UpdateDisplayComponent.css
@@ -109,6 +109,7 @@
 .updateDisplayDescriptionCtnr {
     /* border: 2px solid black; */
     /* height: 1000px; */
+    margin-bottom: 150px;
 }
 
 .updateDisplayDescription{
