--- a/react-app/src/components/UpdatePatchComponent/UpdatePatchComponent.css
+++ b/react-app/src/components/UpdatePatchComponent/UpdatePatchComponent.css
@@ -7,8 +7,24 @@
     
 }
 
-.componentTitle {
+/*----------------------------------------------------------------*/
 
+.updatePatch_return_ctnr {
+    display: flex;
+    /* justify-content: center; */
+    padding-left: 20%;
+    padding-top: 50px;
+
+    border: 2px solid red;
+    width: 100%;
+}
+
+.updatePatch_return {
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+    width: 200px;
+    margin-right: 20%;
 }
 
 /*----------------------------------------------------------------*/
@@ -25,7 +41,7 @@
     /* border: 2px solid blue; */
     font-size:40px;
     margin-bottom: 30px;
-    margin-top: 150px;
+    margin-top: 80px;
     width: 700px;
 }
 
