--- a/react-app/src/components/UpdatePatchComponent/UpdatePatchComponent.css
+++ b/react-app/src/components/UpdatePatchComponent/UpdatePatchComponent.css
@@ -15,7 +15,7 @@
     padding-left: 20%;
     padding-top: 50px;
 
-    border: 2px solid red;
+    /* border: 2px solid red; */
     width: 100%;
 }
 
