--- a/react-app/src/components/EditProjectPage/EditProjectPage.css
+++ b/react-app/src/components/EditProjectPage/EditProjectPage.css
@@ -2,6 +2,25 @@
   padding: 12px 18px;
 }
 
+.edit-page-buttons {
+  display: flex;
+  align-items: flex-end;
+}
+
+.edit-project-view-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(25, 135, 185);
+  font-size: 13px;
+  margin-right: 10px;
+}
+
+.edit-project-view-button:hover {
+  background-color: rgb(17, 84, 116);
+  color: white;
+}
+
 .edit-project-next {
   height: 43px;
   min-width: 168px;
