--- a/react-app/src/components/ProjectPage/FAQ/FAQ.css
+++ b/react-app/src/components/ProjectPage/FAQ/FAQ.css
@@ -6,15 +6,18 @@
 
 .component-container{
   margin: 0 auto;
+  /* margin-bottom: 30px; */
   padding-top: 50px;
   padding-bottom: 30px;
   width: 90%;
+  height: 100%;
   display:flex;
   font-family: 'Nunito Sans', sans-serif;
 }
 
 .component-header{
   color:rgb(59, 59, 59);
+  
 }
 
 .faq-container{
@@ -25,7 +28,9 @@
 }
 
 .faq-right{
+  /* border: 2px solid red; */
   margin-left: 30px;
+  margin-bottom: 50px;
   border-left: 2px solid rgb(179, 179, 179);
   padding: 30px;
   height: 150px;
@@ -49,16 +54,19 @@
   background-color: rgb(22, 22, 22);
 }
 
+/*----------------------------------------------------*/
+
 .question-container{
   width:600px;
   border: 2px solid rgb(187, 187, 187);
+  background-color: white;
   border-radius: 1px;
   padding: 20px;
   margin: 15px;
 }
 
 .question-container:hover{
-  background-color: rgb(236, 236, 236);
+  background-color: white;
   cursor: pointer;
 }
 
@@ -102,7 +110,59 @@
 }
 
 .question-btn {
-  height: 50px;
+  height: 40px;
   margin-top: 2px;
   width: 125px;
+}
+
+/*--------------------------------------------------*/
+
+.FAQWindow_bottom {
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 30px;
+
+}
+
+.FAQBtns_ctnr {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* gap: 60px; */
+
+}
+
+.FAQPage_editBtn {
+  /* border: 2px solid blue; */
+  display: flex;
+  background-color: rgb(4, 165, 109);
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+}
+
+.FAQPage_editBtn:hover {
+  background-color: rgb(2, 101, 66);
+  color: white;
+}
+
+
+.FAQPage_deleteBtn {
+  /* border: 2px solid orange; */
+  display: flex;
+  background-color: rgb(4, 165, 109);
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+}
+
+.FAQPage_deleteBtn:hover {
+  background-color: rgb(2, 101, 66);
+  color: white;
 }
