edit page nav bar will follow as you scroll down

--- a/react-app/src/components/EditProjectPage/EditProjectPage.css
+++ b/react-app/src/components/EditProjectPage/EditProjectPage.css
@@ -1,5 +1,8 @@
-.nav-bar {
+.edit-page-nav-bar {
+  position: sticky;
+  top: 0;
   padding: 12px 18px;
+  background-color: white;
 }
 
 .edit-page-buttons {
