--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -1,30 +1,16 @@
+.grid-container {
+    margin: 0 auto;
+    padding: 0 60px;
+    max-width: 1366px;
+}
+
+
 .splash-page.main_container{
     height: 1100px;
     /* border: 2px solid rgb(136, 59, 59); */
 
 }
 
-.splashNav_container{
-    /* border: 1px solid red; */
-    border-bottom: 1px solid rgba(0, 0, 0, 0.112);
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-
-
-}
-
-.splashNav{
-    /* border: 1px solid black; */
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: #656969;
-    font-family: "Maison Neue Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 400;
-}
 
 .featuredProj_outmost_container{
     border-right: 1px solid rgba(0, 0, 0, 0.112);
