added navlinks for categories

--- a/react-app/src/components/SplashPageComponent/SplashPageComponent.css
+++ b/react-app/src/components/SplashPageComponent/SplashPageComponent.css
@@ -4,6 +4,10 @@
     max-width: 1366px;
 }
 
+.category-nav {
+    display: flex;
+    margin: 1.8rem 0;
+}
 
 .splash-page.main_container{
     height: 1100px;
